--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <nav class="menu-bar">
+        <div class="group">
+          <a class="item title" href="https://github.com/DikayPanda/calcprocent">Автопроценты</a>
+        </div>
+        <div class="group">
+            <a class="item" href="index.html">30/30/25/15</a>
+            <a class="item" href="test.html">Свободные</a>
+        </div>
+      </nav>
     <div class="instruction">
         <h1>Автоматический подсчет процентов для схемы 30\30\25\15<span class="tooltip">*<span class="tooltiptext">Схема откладывания средств позволяющая легко закрывать ипотеку, откладывать на финансовую подушку
             и тд.</h1>
