--- a/test.html
+++ b/test.html
@@ -5,6 +5,15 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <nav class="menu-bar">
+        <div class="group">
+          <a class="item title" href="https://github.com/DikayPanda/calcprocent">Автопроценты</a>
+        </div>
+        <div class="group">
+          <a class="item" href="index.html">30/30/25/15</a>
+          <a class="item" href="test.html">Свободные</a>
+        </div>
+      </nav>
     <div class="container">
         <div class="input-container">
             <input type="number" placeholder="Сумма" id="main-input">
